// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users e2e GET /users/:userId/reset-password happy path 1`] = `
"<html>
  <head>
    <title>NightGuide password reset</title>
  </head>
  <body>
    <style>
      html, body {
        background: #1f1f1f;
        font-family: 'Helvetica Neue', Helvetica, Arial;
      }
      h1 {
        color: #fff;
        margin-top: 2em;
      }
      main {
        max-width: 860px;
        padding: 1em;
        margin: 0 auto;
      }
      button {
        background: none;
        border: none;
        background: #2BAADF;
        color: #fff;
        padding: 1em;
        margin: 1em 0;
        border-radius: 2px;
        font-size: 1rem;
      }
      form {
        padding: 0.1em 0;
      }
      .form-item {
        margin: 1em 0;
        color: #fff;
      }
      .form-item label {
        display: block;
        margin-bottom: 0.3em;
      }
      input[type=\\"text\\"], input[type=\\"password\\"] {
        background: rgba(255,255,255,0.2);
        border: none;
        padding: 0.5em 1em;
        border-radius: 2px;
        min-width: 300px;
        color: #fff;
        font-size: 1rem;
      }
    </style>
    <main>
      <p>
        <img alt=\\"NightGuide logo\\" src=\\"https://static.nightguide.app/logo.svg\\" width=\\"183\\" style=\\"max-width:183px; padding-bottom: 0; display: inline !important; vertical-align: bottom;\\" class=\\"mcnImage\\">
      </p>
      <p>
        <h1>Reset your password</h1>

        <form>
          <div class=\\"form-item\\">
            <label for=\\"password\\">New password</label>
            <input name=\\"password\\" id=\\"password\\" type=\\"password\\">
          </div>
          <div class=\\"form-item\\">
            <label for=\\"password\\">Repeat password</label>
            <input id=\\"password-repeat\\" type=\\"password\\">
          </div>
        </form>

        <button id=\\"reset-submit\\">Reset password</button>

        <script src=\\"https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js\\"></script>
        <script>
          (function($) {
            let loading = false;

            $('#reset-submit').click(function() {
              if (loading) return;

              loading = true;

              if ($('#password').value !== $('#password-repeat').value) {
                alert('The passwords do not match')
                return;
              }

              $.ajax({
                type: 'POST',
                url: 'http://localhost:8080/users/5c001cac8e84e1067f34695c/reset-password?token=testtoken',
                data: convertFormToJSON('form'),
                contentType: 'application/json',
              })
                .done(function() {
                  $('h1').text('Your password has been reset');
                  $('form, button').remove();
                })
                .fail(function(e) {
                  $('h1').text('Something went wrong, try again');
                  loading = false;
                });
            });

            function convertFormToJSON(form){
              var array = jQuery(form).serializeArray();
              var obj = {};

              jQuery.each(array, function() {
                obj[this.name] = this.value || '';
              });

              return JSON.stringify(obj);
            }
          })(jQuery)
        </script>
      </p>
    </main>
  </body>
</html>"
`;

exports[`users e2e GET /users/:userId/verify-account happy path 1`] = `
"<html>
  <head>
    <title>NightGuide account verified</title>
  </head>
  <body>
    <style>
      html, body {
        background: #1f1f1f;
        font-family: 'Helvetica Neue', Helvetica, Arial;
      }
      h1 {
        color: #fff;
        margin-top: 2em;
      }
      main {
        max-width: 860px;
        padding: 1em;
        margin: 0 auto;
      }
      button {
        background: none;
        border: none;
        background: #2BAADF;
        color: #fff;
        padding: 1em;
        margin: 1em 0;
        border-radius: 2px;
        font-size: 1rem;
      }
    </style>
    <main>
      <p>
        <img alt=\\"NightGuide logo\\" src=\\"https://static.nightguide.app/logo.svg\\" width=\\"183\\" style=\\"max-width:183px; padding-bottom: 0; display: inline !important; vertical-align: bottom;\\" class=\\"mcnImage\\">
      </p>
      <p>
          <h1>Your account has been verified</h1>
      </p>
    </main>
  </body>
</html>"
`;

exports[`users e2e POST /users happy path 1`] = `
Object {
  "__v": 0,
  "birthday": "1995-10-04",
  "createdAt": Any<String>,
  "email": "alice@rogers.nl",
  "firstName": "Alice",
  "gender": "female",
  "id": Any<String>,
  "lastName": "Rogers",
  "updatedAt": Any<String>,
}
`;

exports[`users e2e POST /users updates the user if another authentication method was used before 1`] = `
Object {
  "__v": 0,
  "birthday": "1995-10-04",
  "createdAt": Any<String>,
  "email": "facebook@roy.com",
  "firstName": "Alice",
  "gender": "female",
  "id": Any<String>,
  "lastName": "Rogers",
  "updatedAt": Any<String>,
}
`;

exports[`users e2e POST /users/:userId/resend-verification-token happy path 1`] = `
Array [
  "alice@rogers.nl",
  "Verify your account",
  "
You can verify your account by following <a href=\\"http://localhost:8080/users/5c001cac8e84e1067f34695c/verify-account?token=testtoken\\" target=\\"_blank\\">this link</a>. After you verified your account, you can login and start using your account.<br/>
<br/>
<a href=\\"http://localhost:8080/users/5c001cac8e84e1067f34695c/verify-account?token=testtoken\\" target=\\"_blank\\">http://localhost:8080/users/5c001cac8e84e1067f34695c/verify-account?token=testtoken</a>
    ",
]
`;

exports[`users e2e POST /users/login happy path 1`] = `
Object {
  "__v": 0,
  "birthday": "1995-10-04",
  "createdAt": Any<String>,
  "email": "alice@rogers.nl",
  "firstName": "Alice",
  "gender": "female",
  "id": Any<String>,
  "lastName": "Rogers",
  "updatedAt": Any<String>,
}
`;

exports[`users e2e POST /users/login-fb happy path 1`] = `
Object {
  "__v": 0,
  "birthday": "1995-10-04",
  "createdAt": Any<String>,
  "email": "alice@rogers.nl",
  "firstName": "Alice",
  "gender": "female",
  "id": Any<String>,
  "lastName": "Rogers",
  "updatedAt": Any<String>,
}
`;

exports[`users e2e POST /users/send-password-reset happy path 1`] = `
Array [
  "alice@rogers.nl",
  "Reset your password",
  "
You can reset your password by following <a href=\\"http://localhost:8080/users/5c001cac8e84e1067f34695c/reset-password?token=testtoken\\" target=\\"_blank\\">this link</a>.<br/>
<br/>
<a href=\\"http://localhost:8080/users/5c001cac8e84e1067f34695c/reset-password?token=testtoken\\" target=\\"_blank\\">http://localhost:8080/users/5c001cac8e84e1067f34695c/reset-password?token=testtoken</a>
    ",
]
`;
